K8s/todos.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/todos/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - app
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - todo-service
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: todo-service
          image: your-docker-user/todo-backend-todos:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /todos/actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: todo-service
  ports:
    - port: 8080
      targetPort: 8080
